--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,30 +1,33 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap');
 
-.img-size-carousel1 {
+.img-size-carousel1 , .img-size-carousel2{
     width: 100%;
-    height: 500px;
+    height: 65vw;
+    max-height: 650px;
+    min-height: 375px;
+}
+.img-size-carousel1 {
     object-fit: cover;
 }
 
 .img-size-carousel2 {
-    width: 100%;
-    height: 500px;
     object-fit: fill;
 }
 
-.texto1carousel{
+.texto1carousel , .texto2carousel{
     font-family: "Montserrat", sans-serif;
-    font-size: 60px;
+    margin-bottom: 0px;
     color: white;
-    line-height: 0.5;
+    text-shadow: 4px 1px black;
+}
+
+.texto1carousel{
+    font-size: 60px;
 }
 
 .texto2carousel{
-    font-family: "Montserrat", sans-serif;
     font-size: 36px;
-    color: white;
 }
-
 
 .position-carousel-absolute{
     position: absolute;
@@ -33,10 +36,15 @@
     padding-bottom: 3rem;
 }
 
-.carousel-control-next-icon {
+.carousel-control-next-icon , .carousel-control-prev-icon {
     display:none;
 }
 
-.carousel-control-prev-icon {
-    display:none;
+@media (max-width: 700px) {
+    .texto1carousel {
+        font-size: 28px;
+    }
+    .texto2carousel{
+        font-size: 23px;
+    }
 }
