--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
 .img-size-carousel1 , .img-size-carousel2{
     width: 100%;
