--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap');
 
+.z-index-carousel {
+position: relative;
+z-index: 0;
+}
+
 .img-size-carousel1 , .img-size-carousel2{
     width: 100%;
     height: 65vw;
