--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -26,7 +26,7 @@ align-items: center;
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    gap: 4rem;
+    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
@@ -37,6 +37,7 @@ align-items: center;
     font-family: "Montserrat", sans-serif;
     font-size: 22px;
     font-weight: 700;
+    padding: 2rem;
 }
 
 .search-container {
@@ -105,3 +106,64 @@ align-items: center;
     border:0;
     background-color: transparent;
 }
+
+.container-header-mobile {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.nav-button-mobile-container {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.nav-button-mobile{
+    border:0;
+    background-color: transparent;
+}
+
+.compras-button-mobile {
+    display:flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.img-logo-mobile{
+    width: 166px;
+}
+
+@media (max-width: 800px) {
+    .img-logo-header-desktop {
+      width: 300px;
+    }
+
+
+  }
+
+  @media (max-width: 600px) {
+    .img-logo-header-desktop {
+      width: 250px;
+    }
+
+
+  }
+
+@media (max-width: 500px) {
+    .header-desktop {
+      display: none;
+    }
+
+    .texto-barra-superior{
+        font-size: 10px;
+    }
+
+
+  }
+
+  @media (min-width: 500px) {
+    .header-mobile {
+      display: none;
+    }
+
+  }
