--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -28,6 +28,22 @@
 .color-footer-mobile {
   color: #e2e2e2;
 }
+/* estilos para borde inferior */
+.aux-desktop-border-footer{
+  border: 3px solid white;
+  border-style: solid hidden hidden;
+  padding-right: 100px;
+  padding-top: 1px;
+  margin-right: 400px;
+}
+/* estilos para borde inferior */
+.aux-desktop-border-footerContacto{
+  border: 3px solid white;
+  border-style: solid hidden hidden ;
+  padding-right: 230px;
+  padding-top: 1px;
+  margin-right: 400px;
+}
 
 @media (max-width: 500px) {
   .footer-desktop {
