--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,19 +1,25 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap");
 
 .barra-superior-header {
-  background-color: #f4ece0;
+  background-color: #ffe661;
 }
 
 .texto-barra-superior {
   font-size: 16px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
+  font-family: "Outfit", sans-serif;
+  font-weight: 500;
   margin: 0;
   text-align: center;
 }
 
 .nav-container-desktop {
   display: flex;
+}
+
+.logo-header-desktop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .nav-desktop {
@@ -28,16 +34,27 @@
   list-style-type: none;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  padding-top: 5px;
 }
 
 .li-nav-desktop {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Montserrat", sans-serif;
-  font-size: 22px;
-  font-weight: 700;
-  padding: 2rem;
+  font-family: "Outfit", sans-serif;
+  font-size: 14px;
+  font-weight: 500;
+  padding: 1.5rem;
+}
+
+.orange-color-ofertas {
+  color: #ff7a00;
+  text-decoration: none;
+}
+
+.orange-color-ofertas:hover {
+  color: #ff7a00;
+  border-bottom: 2px solid #ff7a00;
 }
 
 .search-container {
@@ -50,10 +67,12 @@
 .link-style {
   text-decoration: none;
   color: black;
+  border-bottom: 2px solid transparent;
 }
 
 .link-style:hover {
-  color: #00000040;
+  color: black;
+  border-bottom: 2px solid black;
 }
 
 .search-form-desktop {
