--- a/src/styles/userregister.css
+++ b/src/styles/userregister.css
@@ -1,119 +1,120 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap");
 
 .contenedor-user-register {
-    display: flex;
-    background-color: #E2E2E2;
-    justify-content: center;
+  display: flex;
+  background-color: #e2e2e2;
+  justify-content: center;
 }
 
 .btn-size-register {
-    font-family: 'Outfit', sans-serif;
-    font-size: 14px;
+  font-family: "Outfit", sans-serif;
+  font-size: 14px;
 }
 
 .btn-size-register:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 /* Contenedor del logo y del formulario */
 .cont-principal {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
 }
 
 /* Contenedor del logo*/
 .contenedor-logo {
-    background-color: #E2E2E2;
-    height: 200px;
+  background-color: #e2e2e2;
+  height: 200px;
 }
 
 .contenedor-logo img {
-    width: 320px;
-    height: 220px;
+  width: 320px;
+  height: 220px;
 }
 
 /* Contenedor del formulario */
 .contenedor-formulario {
-    background-color: white;
-    width: 85%;
-    height: 570px;
-    border-radius: 5px;
-    border: 1px solid #00000040;
+  background-color: white;
+  width: 85%;
+  height: 570px;
+  border-radius: 5px;
+  border: 1px solid #00000040;
+  margin-bottom: 5rem;
 }
 
 .btn-registro-inicio-sesion {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 2em;
-    margin: 50px;
-    height: 60px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2em;
+  margin: 50px;
+  height: 60px;
 }
 
 .btn-registro-inicio-sesion button {
-    background-color: white;
-    border: 3px solid white;
-    width: 400px;
-    height: 70px;
+  background-color: white;
+  border: 3px solid white;
+  width: 400px;
+  height: 70px;
 }
 
 .btn-registro-inicio-sesion button:hover {
-    border-bottom: 3px solid black;
+  border-bottom: 3px solid black;
 }
 
 .linea-central-botones {
-    font-size: 50px;
-    color: #E2E2E2;
+  font-size: 50px;
+  color: #e2e2e2;
 }
 
 .contenedor-seccion-principal {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 1em;
-    margin: 2em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1em;
+  margin: 2em;
 }
 
 .form-registro {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 9px;
-    width: 600px;
-    height: 250px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 9px;
+  width: 600px;
+  height: 250px;
 }
 
 .link-cambio-contrasenia {
-    color: black;
-    font-size: 12px;
+  color: black;
+  font-size: 12px;
 }
 
 .btn-ingresar {
-    margin: 2em;
-    background-color: black;
-    color: white;
-    width: 110px;
-    height: 40px;
-    border-radius: 10px;
-    font-family: 'Outfit', sans-serif;
+  margin: 2em;
+  background-color: black;
+  color: white;
+  width: 110px;
+  height: 40px;
+  border-radius: 10px;
+  font-family: "Outfit", sans-serif;
 }
 
 .btn-ingresar:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .contenedor-google-facebook {
-    display: flex;
-    flex-direction: row;
-    gap: 1em;
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
 }
 
 .btn-ingreso-redes-sociales {
-    border: 1px solid black;
-    border-radius: 10px;
-    padding: 5px;
+  border: 1px solid black;
+  border-radius: 10px;
+  padding: 5px;
 }
