--- a/src/styles/userregister.css
+++ b/src/styles/userregister.css
@@ -43,6 +43,7 @@
   border-radius: 5px;
   border: 1px solid #00000040;
   margin-bottom: 70px;
+  margin-top: 70px;
   font-family: "Outfit", sans-serif;
 }
 
