--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -14,13 +14,14 @@
 
 .nav-container-desktop {
   display: flex;
+  justify-content: space-between;
 }
 
 .logo-header-desktop {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-left: 2rem;
+  padding-left: 3rem;
 }
 
 .nav-desktop {
@@ -43,9 +44,9 @@
   justify-content: center;
   align-items: center;
   font-family: "Outfit", sans-serif;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: 500;
-  padding: 1.5rem;
+  padding: 1.5rem 2rem 1.5rem 2rem;
 }
 
 .orange-color-ofertas {
