--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap");
+
 .transition, .main_ul .main-ul_li i:before, .main_ul .main-ul_li i:after, .main-ul-li_p {
     transition: all 0.25s ease-in-out;
   }
@@ -16,27 +18,25 @@
     user-select: none;
   }
   
-  html {
-    width: 100%;
-    height: 100%;
-    perspective: 900;
-    overflow-y: scroll;
-    background-color: #dce7eb;
-    font-family: "Titillium Web", sans-serif;
-    color: rgba(48, 69, 92, 0.8);
-  }
+  /* html {
+  } */
   
   .main {
-    min-height: 0;
     display: inline-block;
     position: relative;
     left: 50%;
-    margin: 90px 0;
-    transform: translate(-50%, 0);
-    box-shadow: 0 10px 0 0 #6b75e3 inset;
-    background-color: #fefffa;
+    width: 100%;
     max-width: 450px;
+    height: 100%;
+    min-height: 0;
+    margin: 90px 0;
     padding: 30px;
+    font-family: "Outfit", sans-serif;
+    font-weight: 500;
+    background-color: #fefffa;
+    border:2px solid #ff7a00;
+    transform: translate(-50%, 0);
+    box-shadow: 0 10px 0 0 #ffe661 inset;
   }
   @media (max-width: 550px) {
     .main {
@@ -50,7 +50,7 @@
   }
   
   .main_h1, .main-h2 {
-    color: #6b75e3;
+    color: #ff7a00;
   }
   
   .main_h1 {
@@ -121,7 +121,7 @@
   .main_ul .main-ul_li i:before, .main_ul .main-ul_li i:after {
     content: "";
     position: absolute;
-    background-color: #6b75e3;
+    background-color: #000000;
     width: 3px;
     height: 9px;
   }
