--- a/src/styles/faq.css
+++ b/src/styles/faq.css
@@ -1,29 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap");
 
-.transition, .main_ul .main-ul_li i:before, .main_ul .main-ul_li i:after, .main-ul-li_p {
-    transition: all 0.25s ease-in-out;
-  }
-  
-  .flipIn, .main_ul .main-ul_li, .main_h1 {
-    animation: flipdown 0.5s ease both;
-  }
-  
-  .no-select, .main-h2 {
-    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-  }
-  
   .main {
     display: inline-block;
     position: relative;
     left: 50%;
     width: 100%;
-    max-width: 450px;
     height: 100%;
     min-height: 0;
     margin: 90px 0;
@@ -31,9 +12,6 @@
     font-family: "Outfit", sans-serif;
     font-weight: 500;
     background-color: #fefffa;
-    border-bottom:2px solid #ff7a00;
-    border-left:2px solid #ff7a00;
-    border-right:2px solid #ff7a00;
     transform: translate(-50%, 0);
     box-shadow: 0 10px 0 0 #ffe661 inset;
   }
@@ -49,11 +27,11 @@
     }
   }
   
-  .main_h1, .main-h2 {
+  .title-faq, .subtitle-faq{
     color: #ff7a00;
   }
   
-  .main_h1 {
+  .title-faq {
     text-transform: uppercase;
     font-size: 36px;
     line-height: 42px;
@@ -61,7 +39,7 @@
     font-weight: 100;
   }
   
-  .main-h2 {
+  .subtitle-faq {
     font-size: 26px;
     line-height: 34px;
     font-weight: 300;
@@ -72,106 +50,3 @@
     cursor: pointer;
   }
   
-  .main-ul-li_p {
-    color: rgba(48, 69, 92, 0.8);
-    font-size: 17px;
-    line-height: 26px;
-    letter-spacing: 1px;
-    position: relative;
-    overflow: hidden;
-    max-height: 800px;
-    opacity: 1;
-    transform: translate(0, 0);
-    margin-top: 14px;
-    z-index: 2;
-  }
-  
-  .main_ul {
-    list-style: none;
-    perspective: 900;
-    padding: 0;
-    margin: 0;
-  }
-  .main_ul .main-ul_li {
-    position: relative;
-    padding: 0;
-    margin: 0;
-    padding-bottom: 4px;
-    padding-top: 18px;
-    border-top: 1px dotted #dce7eb;
-  }
-  .main_ul .main-ul_li:nth-of-type(1) {
-    animation-delay: 0.5s;
-  }
-  .main_ul .main-ul_li:nth-of-type(2) {
-    animation-delay: 0.75s;
-  }
-  .main_ul .main-ul_li:nth-of-type(3) {
-    animation-delay: 1s;
-  }
-  .main_ul .main-ul_li:last-of-type {
-    padding-bottom: 0;
-  }
-  .main_ul .main-ul_li i {
-    position: absolute;
-    transform: translate(-6px, 0);
-    margin-top: 16px;
-    right: 0;
-  }
-  .main_ul .main-ul_li i:before, .main_ul .main-ul_li i:after {
-    content: "";
-    position: absolute;
-    background-color: #000000;
-    width: 3px;
-    height: 9px;
-  }
-  .main_ul .main-ul_li i:before {
-    transform: translate(-2px, 0) rotate(45deg);
-  }
-  .main_ul .main-ul_li i:after {
-    transform: translate(2px, 0) rotate(-45deg);
-  }
-  .main_ul .main-ul_li input[type=checkbox] {
-    position: absolute;
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    opacity: 0;
-  }
-  .main_ul .main-ul_li input[type=checkbox]:checked ~ p {
-    margin-top: 0;
-    max-height: 0;
-    opacity: 0;
-    transform: translate(0, 50%);
-  }
-  .main_ul .main-ul_li input[type=checkbox]:checked ~ i:before {
-    transform: translate(2px, 0) rotate(45deg);
-  }
-  .main_ul .main-ul_li input[type=checkbox]:checked ~ i:after {
-    transform: translate(-2px, 0) rotate(-45deg);
-  }
-  
-  @keyframes flipdown {
-    0% {
-      opacity: 0;
-      transform-origin: top center;
-      transform: rotateX(-90deg);
-    }
-    5% {
-      opacity: 1;
-    }
-    80% {
-      transform: rotateX(8deg);
-    }
-    83% {
-      transform: rotateX(6deg);
-    }
-    92% {
-      transform: rotateX(-3deg);
-    }
-    100% {
-      transform-origin: top center;
-      transform: rotateX(0deg);
-    }
-  }
