--- a/src/styles/enterprofile.css
+++ b/src/styles/enterprofile.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap%22");
 
 .contenedor-user-register {
   display: flex;
@@ -6,16 +6,11 @@
   justify-content: center;
 }
 
-.btn-size-register {
-  font-family: "Outfit", sans-serif;
-  font-size: 14px;
-}
-
 .btn-size-register:hover {
   cursor: pointer;
 }
 
-/* Contenedor del logo y del formulario */
+/* Contenedor del logo y del formulario  */
 .cont-principal {
   display: flex;
   flex-direction: column;
@@ -24,7 +19,7 @@
   gap: 5px;
 }
 
-/* Contenedor del logo*/
+/* / Contenedor del logo*/
 .contenedor-logo {
   background-color: #e2e2e2;
   height: 200px;
@@ -33,18 +28,6 @@
 .contenedor-logo img {
   width: 320px;
   height: 220px;
-}
-
-/* Contenedor del formulario */
-.contenedor-formulario {
-  background-color: white;
-  width: 85%;
-  height: 600px;
-  border-radius: 5px;
-  border: 1px solid #00000040;
-  margin-bottom: 70px;
-  margin-top: 70px;
-  font-family: "Outfit", sans-serif;
 }
 
 .btn-registro-inicio-sesion {
@@ -81,49 +64,27 @@
   margin: 2em;
 }
 
-.form-registro {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 9px;
-  width: 600px;
-  height: 250px;
-}
-
-.label-mail-contrasenia {
-  display: flex;
-  justify-content: flex-start !important;
-}
-
-.link-cambio-contrasenia {
-  color: black;
-  font-size: 12px;
-}
-
-.btn-ingresar {
-  margin: 16px;
-  background-color: black;
-  color: white;
-  width: 110px;
-  height: 40px;
-  border-radius: 10px;
+.contenedor-formulario {
+  background-color: white;
+  width: 85%;
+  height: 100%;
+  border-radius: 5px;
+  border: 1px solid #00000040;
+  margin-bottom: 70px;
   font-family: "Outfit", sans-serif;
-  padding: 5px;
 }
 
 .parrafo-inicio-sesion-redes {
   margin-top: 50px;
+  text-align: center;
   font-size: 13px;
   font-weight: bold;
-}
-
-.btn-ingresar:hover {
-  cursor: pointer;
 }
 
 .contenedor-google-facebook {
   display: flex;
   flex-direction: row;
+  justify-content: center;
   gap: 1em;
   padding-bottom: 90px;
 }
@@ -142,9 +103,4 @@
 
 .btn-ingreso-redes-sociales img {
   width: 25px;
-}
-
-#email,
-#contrasenia {
-  width: 450px;
 }
