--- a/src/styles/enterprofile.css
+++ b/src/styles/enterprofile.css
@@ -19,7 +19,7 @@
   gap: 5px;
 }
 
-/* / Contenedor del logo*/
+/* Contenedor del logo*/
 .contenedor-logo {
   background-color: #e2e2e2;
   height: 200px;
@@ -70,7 +70,7 @@
   height: 100%;
   border-radius: 5px;
   border: 1px solid #00000040;
-  margin-bottom: 70px;
+  margin: 70px;
   font-family: "Outfit", sans-serif;
 }
 
@@ -90,15 +90,20 @@
 }
 
 .btn-ingreso-redes-sociales {
-  border: 1px solid black;
+  border: 1px solid #e2e2e2;
   border-radius: 10px;
-  width: 150px;
+  width: 15%;
   height: 40px;
   display: flex;
   flex-direction: row;
+  justify-content: center;
   align-items: center;
   gap: 13px;
   font-size: 14px;
+}
+
+.btn-ingreso-redes-sociales p {
+  margin: 0;
 }
 
 .btn-ingreso-redes-sociales img {
