--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,19 +1,27 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Outfit:wght@200;300;400;500;600;700&display=swap");
 
 .barra-superior-header {
-  background-color: #f4ece0;
+  background-color: #ffe661;
 }
 
 .texto-barra-superior {
   font-size: 16px;
-  font-family: "Montserrat", sans-serif;
-  font-weight: 700;
+  font-family: "Outfit", sans-serif;
+  font-weight: 500;
   margin: 0;
   text-align: center;
 }
 
 .nav-container-desktop {
   display: flex;
+  justify-content: space-between;
+}
+
+.logo-header-desktop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-left: 3rem;
 }
 
 .nav-desktop {
@@ -28,16 +36,29 @@
   list-style-type: none;
   justify-content: space-evenly;
   flex-wrap: wrap;
+  padding-top: 5px;
+  padding-left: 1rem;
 }
 
 .li-nav-desktop {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Montserrat", sans-serif;
-  font-size: 22px;
-  font-weight: 700;
-  padding: 2rem;
+  font-family: "Outfit", sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 1.5rem 2rem 1.5rem 2rem;
+}
+
+.orange-color-ofertas {
+  color: #ff7a00;
+  text-decoration: none;
+  border-bottom: 2px solid transparent;
+}
+
+.orange-color-ofertas:hover {
+  color: #ff7a00;
+  border-bottom: 2px solid #ff7a00;
 }
 
 .search-container {
@@ -50,10 +71,12 @@
 .link-style {
   text-decoration: none;
   color: black;
+  border-bottom: 2px solid transparent;
 }
 
 .link-style:hover {
-  color: #00000040;
+  color: black;
+  border-bottom: 2px solid black;
 }
 
 .search-form-desktop {
@@ -96,7 +119,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
 .profile-button-desktop {
@@ -141,15 +164,51 @@
   width: 166px;
 }
 
+@media (max-width: 1440px) {
+  .li-nav-desktop {
+    font-size: 16px;
+    padding: 1rem 1rem 1rem 1rem;
+  }
+}
+
+@media (max-width: 1366px) {
+  .li-nav-desktop {
+    font-size: 14px;
+    padding: 1rem 1rem 1rem 1rem;
+  }
+
+  .img-logo-header-desktop {
+    width: 250px;
+  }
+
+  .search-container {
+    padding-left: 0;
+  }
+}
+
+@media (max-width: 1280px) {
+  .li-nav-desktop {
+    font-size: 12px;
+  }
+
+  .img-logo-header-desktop {
+    width: 220px;
+  }
+
+  .search-container {
+    padding-left: 0;
+  }
+}
+
 @media (max-width: 800px) {
   .img-logo-header-desktop {
-    width: 300px;
+    width: 250px;
   }
 }
 
 @media (max-width: 600px) {
   .img-logo-header-desktop {
-    width: 250px;
+    width: 200px;
   }
 }
 
