--- a/src/styles/formularioregistro.css
+++ b/src/styles/formularioregistro.css
@@ -77,3 +77,28 @@ body {
     border-radius: 3px;
     margin: 0;
 }
+
+@media (max-width: 500px) {
+    .btn-registrarse {
+        margin: 16px;
+        width: 110px;
+        font-size: 14px;
+        height: 35px;
+        padding: 3px;
+    }
+
+    .form-registro {
+        gap: 10px;
+        width: 300px;
+        height: auto;
+        margin: 1em;
+    }
+
+    #nombre, #apellido, #genero, #email, #contrasenia, #repetircontrasenia {
+        width: 300px;
+        padding: 10px;
+        border: 1px solid #E2E2E2;
+        font-size: 13px;
+        font-family: 'Outfit', sans-serif;
+    }
+}
