--- a/src/styles/enterprofile.css
+++ b/src/styles/enterprofile.css
@@ -102,6 +102,19 @@
   font-size: 14px;
 }
 
+.btn-ingreso-redes-sociales:hover {
+  background-color: #e6e0e0fb;
+}
+
+a:hover {
+  color: black;
+  text-decoration: none;
+}
+
+a:visited {
+  color: black;
+}
+
 .btn-ingreso-redes-sociales p {
   margin: 0;
 }
@@ -110,8 +123,7 @@
   width: 25px;
 }
 
-
-@media (max-width:1042px) {
+@media (max-width: 1042px) {
   .contenedor-formulario {
     width: 700px;
     height: auto;
@@ -126,7 +138,7 @@
   }
 }
 
-@media (max-width:750px) {
+@media (max-width: 750px) {
   .contenedor-formulario {
     width: 550px;
     height: auto;
@@ -153,60 +165,60 @@
   }
 }
 
-  @media (max-width:500px) {
-    .contenedor-formulario {
-      width: 450px;
-      height: auto;
-      margin: 60px;
-    }
-  
-    .btn-ingreso-redes-sociales {
-      width: 115px;
-      height: 40px;
-      display: flex;
-      gap: 8px;
-      font-size: 10px;
-    }
-  
-    .btn-registro-inicio-sesion {
-      gap: 2em;
-      margin: 40px;
-      width: 350px;
-      height: 60px;
-      font-size: 15px;
-    }
-
-    .cont-principal {
-      gap: 5px;
-      width: 200px;
-    }
+@media (max-width: 500px) {
+  .contenedor-formulario {
+    width: 450px;
+    height: auto;
+    margin: 60px;
   }
 
-  @media (max-width:455px) {
-    .contenedor-formulario {
-      width: 415px;
-      height: auto;
-      margin: 60px;
-    }
-  
-    .btn-ingreso-redes-sociales {
-      width: 100px;
-      height: 40px;
-      display: flex;
-      gap: 8px;
-      font-size: 10px;
-    }
-  
-    .btn-registro-inicio-sesion {
-      gap: 2em;
-      margin: 40px;
-      width: 330px;
-      height: 55px;
-      font-size: 13px;
-    }
-
-    .cont-principal {
-      gap: 5px;
-      width: 200px;
-    }
+  .btn-ingreso-redes-sociales {
+    width: 115px;
+    height: 40px;
+    display: flex;
+    gap: 8px;
+    font-size: 10px;
   }
+
+  .btn-registro-inicio-sesion {
+    gap: 2em;
+    margin: 40px;
+    width: 350px;
+    height: 60px;
+    font-size: 15px;
+  }
+
+  .cont-principal {
+    gap: 5px;
+    width: 200px;
+  }
+}
+
+@media (max-width: 455px) {
+  .contenedor-formulario {
+    width: 415px;
+    height: auto;
+    margin: 60px;
+  }
+
+  .btn-ingreso-redes-sociales {
+    width: 100px;
+    height: 40px;
+    display: flex;
+    gap: 8px;
+    font-size: 10px;
+  }
+
+  .btn-registro-inicio-sesion {
+    gap: 2em;
+    margin: 40px;
+    width: 330px;
+    height: 55px;
+    font-size: 13px;
+  }
+
+  .cont-principal {
+    gap: 5px;
+    width: 200px;
+  }
+}
